--- a/client-app/public/index.html
+++ b/client-app/public/index.html
@@ -30,7 +30,9 @@
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root">
-    <div class="ui active transition visible inverted dimmer" style="display: flex !important;">
+    <div 
+    class="ui active transition visible inverted dimmer" 
+    style="display: flex !important;">
       <div class="content">
         <div class="ui text loader">Loading app...</div>
       </div>
