--- a/client-app/public/index.html
+++ b/client-app/public/index.html
@@ -34,7 +34,7 @@
     class="ui active transition visible inverted dimmer" 
     style="display: flex !important;">
       <div class="content">
-        <div class="ui text loader">Loading app...</div>
+        <div class="ui text loader">Motoranza...</div>
       </div>
     </div>
   </div>
